--- a/form/form11.html
+++ b/form/form11.html
@@ -14,7 +14,7 @@
 	
 	
 	<fieldset>		
-			<legend>Form 1 : Login From</legend>
+			<legend>Form 1 : Login Form</legend>
 			<form method="get" action="#">
 				<table width="30%"   style="margin-left:10px;">
 				<tr>
