--- a/All Tags/all tags.html
+++ b/All Tags/all tags.html
@@ -2,7 +2,7 @@
 <head>
 <title>1st page</title>   <!-- title is 1st page-->
 </head>
-<body bgcolor="#ff9393">
+<body >
 <center>
 <font face="calibri" color="vilot" size="7">R</font>
 <font face="calibri" color="indigo" size="7">A</font>
@@ -43,7 +43,7 @@ Super Script -- X<sup>2<br>
 <a href="2nd.html">Click here to local (this page)</a><br><br>
 <a href="../2nd.html" target="_blank">Click here to local (new page)</a><br><br>
 <a href="https://www.sololearn.com/User/Login/?ReturnUrl=%2fPlay%2fCSharp%2f" target="_blank">Click here for global</a><br><br>
-<img src="2.jpg" width="1500px" height="500px" title="this is first image" alt="image not found"/><br></center>
+<img src="2.jpg" width="300px" height="300px" title="this is first image" alt="image not found"/><br></center>
 </h3>
 </body>
 </html>
